.metadata/.plugins/org.eclipse.cdt.ui/CPIOng.build.log
11:31:10 **** Incremental Build of configuration Debug for project CPIOng ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c ..\src\main.c -mthumb -mcpu=cortex-m3 -std=gnu11 -DSTM32F10X_CL -DUSE_STDPERIPH_DRIVER -I../src -I../Libraries/STM32F10x_StdPeriph_Driver/inc -I../Libraries/CMSIS/Device/ST/STM32F10x/Include -I../Libraries/CMSIS/Include -O0 -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o src\main.o 
..\src\main.c: In function 'InitSysTicker':
..\src\main.c:155:3: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   printf("Error in init system tick"); // noch erro per can?! allgemeine status bits?
   ^~~~~~
..\src\main.c:155:3: warning: incompatible implicit declaration of built-in function 'printf'
..\src\main.c:155:3: note: include '<stdio.h>' or provide a declaration of 'printf'
arm-atollic-eabi-gcc -c ..\src\stm32f1xx_it.c -mthumb -mcpu=cortex-m3 -std=gnu11 -DSTM32F10X_CL -DUSE_STDPERIPH_DRIVER -I../src -I../Libraries/STM32F10x_StdPeriph_Driver/inc -I../Libraries/CMSIS/Device/ST/STM32F10x/Include -I../Libraries/CMSIS/Include -O0 -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o src\stm32f1xx_it.o 
..\src\stm32f1xx_it.c: In function 'SanCanAlive':
..\src\stm32f1xx_it.c:60:3: warning: implicit declaration of function 'SendCan' [-Wimplicit-function-declaration]
   SendCan(0x123, p, 8);
   ^~~~~~~
..\src\stm32f1xx_it.c: At top level:
..\src\stm32f1xx_it.c:64:6: warning: conflicting types for 'SendCan'
 void SendCan(uint32_t id, uint8_t data[], uint8_t len) {
      ^~~~~~~
..\src\stm32f1xx_it.c:60:3: note: previous implicit declaration of 'SendCan' was here
   SendCan(0x123, p, 8);
   ^~~~~~~
..\src\stm32f1xx_it.c: In function 'SendCan':
..\src\stm32f1xx_it.c:74:2: warning: implicit declaration of function 'memcpy' [-Wimplicit-function-declaration]
  memcpy(canMessage.Data, data, len * sizeof(uint8_t));
  ^~~~~~
..\src\stm32f1xx_it.c:74:2: warning: incompatible implicit declaration of built-in function 'memcpy'
..\src\stm32f1xx_it.c:74:2: note: include '<string.h>' or provide a declaration of 'memcpy'
..\src\stm32f1xx_it.c: In function 'SendTimeInfo':
..\src\stm32f1xx_it.c:116:2: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
  printf("Rising edge on .... In %d %d \n", channel, res);
  ^~~~~~
..\src\stm32f1xx_it.c:116:2: warning: incompatible implicit declaration of built-in function 'printf'
..\src\stm32f1xx_it.c:116:2: note: include '<stdio.h>' or provide a declaration of 'printf'
..\src\stm32f1xx_it.c:116:37: warning: format '%d' expects argument of type 'int', but argument 3 has type 'uint32_t {aka long unsigned int}' [-Wformat=]
  printf("Rising edge on .... In %d %d \n", channel, res);
                                     ^
..\src\stm32f1xx_it.c: In function 'CAN2_RX0_IRQHandler':
..\src\stm32f1xx_it.c:240:2: warning: incompatible implicit declaration of built-in function 'printf'
  printf("receive can 2 interrupt\n");
  ^~~~~~
..\src\stm32f1xx_it.c:240:2: note: include '<stdio.h>' or provide a declaration of 'printf'
..\src\stm32f1xx_it.c: In function 'SysTick_Handler':
..\src\stm32f1xx_it.c:344:10: error: 'key' undeclared (first use in this function)
  switch (key) {
          ^~~
..\src\stm32f1xx_it.c:344:10: note: each undeclared identifier is reported only once for each function it appears in
..\src\stm32f1xx_it.c:345:8: error: 'value' undeclared (first use in this function)
   case value:
        ^~~~~

11:31:10 Build Finished (took 535ms)

